objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACO_Participation__c</fullName>
        <label>ACO Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A.M. Beajow, M.D. Internal Medicine Associates ACO, P.C</fullName>
                </value>
                <value>
                    <fullName>AAMC Collaborative Care Network, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Alliance of Ventura, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Clinical Services, PC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Central Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Coastal Georgia, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of DeKalb, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Eastern North Carolina, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater Augusta &amp; Statesboro, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater Houston, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater New York, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Green Mountains, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Maryland, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Maryland Primary Care, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Mississippi, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Mount Kisco, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of North Texas, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Northwest Florida, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Southeast Wisconsin, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of South Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Syracuse, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Texas, Inc.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of The Tri-Counties, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Western Georgia, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Options, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of New England, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of Puerto Rico, Inc.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of the North Country, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Partners, LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountText__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_for_Merge__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Name_for_Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_AN_Cases__c</fullName>
        <label>Annual AN Cases</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 10,000</fullName>
                </value>
                <value>
                    <fullName>10,001 - 25,000</fullName>
                </value>
                <value>
                    <fullName>25,001 - 50,000</fullName>
                </value>
                <value>
                    <fullName>50,001 - 100,000</fullName>
                </value>
                <value>
                    <fullName>More than 100,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_ED_Visits__c</fullName>
        <label>Annual ED Visits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 20,000</fullName>
                </value>
                <value>
                    <fullName>20,001 - 30,000</fullName>
                </value>
                <value>
                    <fullName>30,001 - 60,000</fullName>
                </value>
                <value>
                    <fullName>60,001 - 80,000</fullName>
                </value>
                <value>
                    <fullName>80,001 - 100,000</fullName>
                </value>
                <value>
                    <fullName>More than 100,000</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Hospitalist_Encounters__c</fullName>
        <label>Annual Hospitalist Encounters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 10,000</fullName>
                </value>
                <value>
                    <fullName>10,001 - 25,000</fullName>
                </value>
                <value>
                    <fullName>25,001 - 50,000</fullName>
                </value>
                <value>
                    <fullName>50,001 - 100,000</fullName>
                </value>
                <value>
                    <fullName>More than 100,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_No_of_Transports__c</fullName>
        <label>Annual No. of Transports</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5,000</fullName>
                </value>
                <value>
                    <fullName>5,000 - 9,999</fullName>
                </value>
                <value>
                    <fullName>10,000 - 19,999</fullName>
                </value>
                <value>
                    <fullName>20,000 - 49,999</fullName>
                </value>
                <value>
                    <fullName>50,000 - 99,999</fullName>
                </value>
                <value>
                    <fullName>100,000 - 149,999</fullName>
                </value>
                <value>
                    <fullName>More than 150,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Meeting_Date__c</fullName>
        <inlineHelpText>Maps in from Lead during conversion</inlineHelpText>
        <label>Appointment/ Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssistantEmail__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <label>Assistant Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone__c</fullName>
        <label>Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Asst_Cell_Phone__c</fullName>
        <label>Assistant Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <formula>if(len(Domain__c)&gt;1,
IF(OR(Domain__c="yahoo.com",
Domain__c="gmail.com",
Domain__c="me.com",
Domain__c="outlook.com", 
Domain__c="icloud.com", 
Domain__c="inbox.com", 
Domain__c="mail.com", 
Domain__c="live.com",
Domain__c="aol.com"),false, true),false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Role__c</fullName>
        <label>Buyer Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Economic Buyer</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Gate Keeper</fullName>
                </value>
                <value>
                    <fullName>Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                </value>
                <value>
                    <fullName>Technical Influencer</fullName>
                </value>
                <value>
                    <fullName>User Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Back_Requested_Date__c</fullName>
        <inlineHelpText>Maps in from Lead during conversion</inlineHelpText>
        <label>Call Back Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Candidate_HS_GED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Talent Acq</description>
        <inlineHelpText>High School or GED completed?</inlineHelpText>
        <label>HS/GED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_Job_Function__c</fullName>
        <label>Candidate Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Compliance/Risk</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product/Technical</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Physician Advisory Solutions (PAS)</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Job_Role__c</fullName>
        <label>Candidate Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Candidate_Job_SubFunction__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accountability Mgr</fullName>
                </value>
                <value>
                    <fullName>Agile Coach</fullName>
                </value>
                <value>
                    <fullName>Application Architect</fullName>
                </value>
                <value>
                    <fullName>Data Scientist</fullName>
                </value>
                <value>
                    <fullName>Denials</fullName>
                </value>
                <value>
                    <fullName>Financial Advocate/Counselor</fullName>
                </value>
                <value>
                    <fullName>Front-end Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Full-stack Software Engineer</fullName>
                </value>
                <value>
                    <fullName>HIM Coding</fullName>
                </value>
                <value>
                    <fullName>Ops Lead</fullName>
                </value>
                <value>
                    <fullName>Patient Access Manager</fullName>
                </value>
                <value>
                    <fullName>Patient Access Supervisor</fullName>
                </value>
                <value>
                    <fullName>Performance Lead</fullName>
                </value>
                <value>
                    <fullName>Platform (.NET) Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Product Owner</fullName>
                </value>
                <value>
                    <fullName>Project mgmt</fullName>
                </value>
                <value>
                    <fullName>PX Deployment</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Revenue Integrity</fullName>
                </value>
                <value>
                    <fullName>RPA BA</fullName>
                </value>
                <value>
                    <fullName>RPA BA Manager</fullName>
                </value>
                <value>
                    <fullName>RPA Developer</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
                <value>
                    <fullName>Sr. Systems Engineer</fullName>
                </value>
                <value>
                    <fullName>Standarization/Deployment</fullName>
                </value>
                <value>
                    <fullName>Technical: Director of Software Engineering</fullName>
                </value>
                <value>
                    <fullName>Technical Product Owner</fullName>
                </value>
                <value>
                    <fullName>UI/UX Designer</fullName>
                </value>
                <value>
                    <fullName>UX Researcher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Job_SubFunction__c</fullName>
        <label>Candidate Job SubFunction</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Candidate_Job_Function__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Acute</fullName>
                </value>
                <value>
                    <fullName>Back end</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Compliance Analyst</fullName>
                </value>
                <value>
                    <fullName>Compliance Manager</fullName>
                </value>
                <value>
                    <fullName>DTO</fullName>
                </value>
                <value>
                    <fullName>Employee Services</fullName>
                </value>
                <value>
                    <fullName>Executive Assistant</fullName>
                </value>
                <value>
                    <fullName>Finance Mgr</fullName>
                </value>
                <value>
                    <fullName>Financial Analyst</fullName>
                </value>
                <value>
                    <fullName>Front end</fullName>
                </value>
                <value>
                    <fullName>General Counsel</fullName>
                </value>
                <value>
                    <fullName>HRBP</fullName>
                </value>
                <value>
                    <fullName>HR Generalist</fullName>
                </value>
                <value>
                    <fullName>HRIS and Analytics</fullName>
                </value>
                <value>
                    <fullName>Internal Audit</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Privacy Analyst</fullName>
                </value>
                <value>
                    <fullName>Privacy Manager</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Security &amp; Audit</fullName>
                </value>
                <value>
                    <fullName>Systems Administrator</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Seniority_Level__c</fullName>
        <label>Candidate Seniority Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Associate (hourly)</fullName>
                </value>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Mid Level</fullName>
                </value>
                <value>
                    <fullName>Sr. Level</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>C-Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Skills__c</fullName>
        <label>Candidate Skills</label>
        <summaryForeignKey>R_SkillAssignment__c.Candidate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Candidate_Status_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Candidate Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments_From_Offline_Import__c</fullName>
        <description>Comments from a manual data offline Import</description>
        <inlineHelpText>Comments from a manual data offline Import</inlineHelpText>
        <label>Comments (From Offline Import)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Comments_From_Forms_2__c</fullName>
        <description>Contact Comments from a Form. MAP forms will be designed to progressively profile two open text fields in order to prevent overwriting</description>
        <inlineHelpText>Contact comments exactly as submitted on a form</inlineHelpText>
        <label>Contact Comments (From Forms)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Comments_From_Forms__c</fullName>
        <description>MAP will Progressive profile 2 form fields as to prevent overwriting</description>
        <inlineHelpText>Contact comments exactly as submitted on a form</inlineHelpText>
        <label>Contact Comments (From Forms)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Domain__c</fullName>
        <formula>SUBSTITUTE( Email , LEFT(Email, FIND("@", Email)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Legacy_ID__c</fullName>
        <label>Contact Legacy ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Type_2__c</fullName>
        <description>Developed but not used in Jan 2018 Roll out. Not visible to anyone but admins</description>
        <label>Contact Type 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Survey Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Maintenance Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Procurement Contact</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Mapped from IMX Functional Role</description>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AN Contact</fullName>
                </value>
                <value>
                    <fullName>Annual Survey Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Manager</fullName>
                </value>
                <value>
                    <fullName>Business Objects Maintenance Updates</fullName>
                </value>
                <value>
                    <fullName>Business Objects Product Updates</fullName>
                </value>
                <value>
                    <fullName>ED Contact</fullName>
                </value>
                <value>
                    <fullName>ED Group Owner</fullName>
                </value>
                <value>
                    <fullName>EHR Primary Contact</fullName>
                </value>
                <value>
                    <fullName>EMR Mx POC</fullName>
                </value>
                <value>
                    <fullName>EMS Contact</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (Ground) BAA/Legal POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (Ground) Executive POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (Ground) Finance POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (Ground) Internal Billing POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (Ground) Maintenance Updates</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (Ground) Ops POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (Ground) Product Updates</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (Ground) Training</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (SaaS) BAA/Legal POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (SaaS) Executive POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (SaaS) Finance POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (SaaS) Internal Billing POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (SaaS) Maintenance Updates</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (SaaS) Ops POC</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (SaaS) Product Updates</fullName>
                </value>
                <value>
                    <fullName>EMS RCM (SaaS) Training</fullName>
                </value>
                <value>
                    <fullName>EMT Mx POC</fullName>
                </value>
                <value>
                    <fullName>Maintenance Contact</fullName>
                </value>
                <value>
                    <fullName>OBB Practice Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <displayFormat>Contact-{00000000}</displayFormat>
        <inlineHelpText>R1 staff should reference this ID when requesting Salesforce.com assistance from internal system support (e.g. Mike Lippman)</inlineHelpText>
        <label>Contact #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Emails_120_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Emails Sent 120 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Emails_Open_120_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Emails Open 120 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Events_120_Days__c</fullName>
        <label>Count Events 120 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Log_Calls_120_Days__c</fullName>
        <label>Count Log Calls 120 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_ACO_Benefits__c</fullName>
        <label>Current ACO Benefits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Care Contracts</fullName>
                </value>
                <value>
                    <fullName>Medicare Shared Savings</fullName>
                </value>
                <value>
                    <fullName>HMO Participation</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Group Purchasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_EMR__c</fullName>
        <label>Current EMR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdvancedMD/ADP</fullName>
                </value>
                <value>
                    <fullName>AllScripts</fullName>
                </value>
                <value>
                    <fullName>Amazing Charts</fullName>
                </value>
                <value>
                    <fullName>Aprima</fullName>
                </value>
                <value>
                    <fullName>AthenaHealth</fullName>
                </value>
                <value>
                    <fullName>Azalea Health</fullName>
                </value>
                <value>
                    <fullName>Care360</fullName>
                </value>
                <value>
                    <fullName>CareCloud</fullName>
                </value>
                <value>
                    <fullName>Cerner Ambulatory</fullName>
                </value>
                <value>
                    <fullName>Chart Logic</fullName>
                </value>
                <value>
                    <fullName>Compugroup Medical (CPG)/Alteer</fullName>
                </value>
                <value>
                    <fullName>CureMD</fullName>
                </value>
                <value>
                    <fullName>Dr. Cloud</fullName>
                </value>
                <value>
                    <fullName>eClinicalWorks</fullName>
                </value>
                <value>
                    <fullName>E-MD</fullName>
                </value>
                <value>
                    <fullName>GE Centricity</fullName>
                </value>
                <value>
                    <fullName>Greenway</fullName>
                </value>
                <value>
                    <fullName>Kareo</fullName>
                </value>
                <value>
                    <fullName>Lytec</fullName>
                </value>
                <value>
                    <fullName>MacPractice</fullName>
                </value>
                <value>
                    <fullName>McKesson Lytec</fullName>
                </value>
                <value>
                    <fullName>Medical Manager</fullName>
                </value>
                <value>
                    <fullName>Medios</fullName>
                </value>
                <value>
                    <fullName>MediSoft</fullName>
                </value>
                <value>
                    <fullName>MediTab</fullName>
                </value>
                <value>
                    <fullName>Meditech</fullName>
                </value>
                <value>
                    <fullName>MediTouch</fullName>
                </value>
                <value>
                    <fullName>MedStar</fullName>
                </value>
                <value>
                    <fullName>Modernizing Medicine</fullName>
                </value>
                <value>
                    <fullName>NextGen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>